--- a/packages/tsuki-server-ts/TODO
+++ b/packages/tsuki-server-ts/TODO
@@ -3,7 +3,6 @@ Todos:
   for authentication mostly for the fact of already having prior experience in implementing.
 
   Core Auth Functionality:
-    ☐ Press Cmd/Ctrl+Enter to add a new todo
     ☐ Users can sign up for to the app with a unique email
     ☐ Users cannot sign up for to the app with a duplicate email
     ☐ Users can login to the app with valid email/password
@@ -13,12 +12,12 @@ Todos:
     ☐ There is a resource that can only be seen by a specific user
     ☐ There is a resource that has some links and content that only appears when logged in / for certain users
   Authentication Security:
-    ☐ Password is hashed in the database using a slow-hashing algorithm @critical 
-    ☐ JWT is sent with `Authentication` header @high
-    ☐ Encryption keys are set in environment variables @critical 
+    ✔ Password is hashed in the database using a slow-hashing algorithm @critical @done(19-02-05 17:38)
+    ☐ JWT is parsed with `Authentication` header @high
+    ✔ Encryption keys are set in environment variables @critical @done(19-02-05 17:38)
   Authentiaction:
-    ☐ Add auth router
-    ☐ Create user with POST /auth/register
+    ☐ Add auth router @started(19-02-05 17:39)
+    ☐ Create user with POST /auth/register @started(19-02-05 17:39)
       ☐ validate required fields
       ☐ Check if email is unique
       ☐ hash password with bcrypt
